--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -1,13 +1,15 @@
-/* Stylesheet shamelessly and lazily copied from other subs */
+/* Stylesheet shamelessly and lazily copied from other subs (DC note; Not anymore fuckers) */
 
 /*DoomedCivilian Has made the following changes;
 DC01 - Removed.
 DC02 - Removal of downvote arrow. and addition of Catvotes.
 DC03 - Sidebar fuckery (Search removed, created by removed, creat new subreddit removed, mod names changed)
-10Feb2012 - Formating of code considerably improved. Except for macros.
-20Feb2012 - Catvotes ported to res-nightmode. !important; fixes everything
-20Feb2012 - Considerable changes to the res-nightmode flags. Changes should mostly effect it. Plounge Chat logo is now visible on the sidebar.
+10Feb2013 - Formating of code considerably improved. Except for macros.
+20Feb2013 - Catvotes ported to res-nightmode. !important; fixes everything
+20Feb2013 - Considerable changes to the res-nightmode flags. Changes should mostly effect it. Plounge Chat logo is now visible on the sidebar.
 DC04 - Someone requested an increase in Roseluck. Submit buttons are now changed. Plan on using something else for one of them, just havn't decided what yet.
+DC05 - Announcement bar created
+24Feb2013 - Name change system changed
 Use Ctrl-F to find and remove them. */
 
 
@@ -32,16 +34,16 @@ body, body.res-nightmode:first-of-type {
 }
 
 .footer-parent {
-    height: 200px;
-    padding-top: 20px;
+    height: 255px;
+    padding-top: 020px;
     padding-bottom: 40px;
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%InAmerica%%);
+    background-image: url(%%canada%%);
     background-position: bottom center;
     background-repeat: no-repeat;
-    margin-bottom: -1px
+    margin-bottom: -1px;
     }
 
 /* Banner Image */
@@ -100,8 +102,27 @@ body.res-nightmode:first-of-type {
     }
 */
 
+/*==================Announcement==================*/
+/*DC05 The blurb that links to whatever post I want it to*/
+/*As best I can tell; Reddit disallows hyperlinks in this field. Likely a security feature, but annoying*/
+/*At some point Draze smells will be the announcement (Draze: :( ).*/
+/* r/Hitler in socks tba*/
 
-/*=========================================*/
+body > .content:before{
+    display: block;
+    margin: 0 0 10px 60px;
+    padding: 6px;
+    background-color: #CCC;
+    font-size: 16px;
+    color: #000000 !important;
+    border: 1px solid;
+    border-color: #000000;
+    border-radius: 15px;
+    width: 1480px;
+    content: "Game Night Week 7 - Planetside 2 - March 2nd @ 5:00 pm Eastern";
+    }
+
+/*===============Arrow Votes Change===============*/
 /*DC02 This code disables the downvote button. And makes upvotes cats. */
 /* Even for .res-nightmode, suck it Draze, all your votes are catvotes */
 
@@ -110,28 +131,34 @@ body.res-nightmode:first-of-type {
     width: 18px !important;
     }
 
-.res-nightmode .arrow.down, .arrow.down {
-    background:url(%%Tinycatdown%%) 0 0 !important;
-    }
-
-.res-nightmode .arrow.down:hover{
-    background:url(%%Tinycatdown%%) !important;
-    }
-
-.res-nightmode .arrow.downmod, .arrow.downmod {
-    background:url(%%Tinycatdownblue%%) 0 0 !important;
-    }
-
-.res-nightmode .arrow.upmod, .arrow.upmod { 
-    background:url(%%Tinycatorange%%) 0 0 !important;
-    }
-
 .res-nightmode .arrow.up, .arrow.up { 
-    background:url(%%Tinycat%%) 0 0 !important;
+    background:url(%%Imgmap%%) 0 0 !important;
+    background-position: 0px -18px !important;
     }
 
 .res-nightmode .arrow.up:hover {
-    background:url(%%Tinycat%%) !important;
+    background:url(%%Imgmap%%) !important;
+    background-position: 0px -18px !important;
+    }
+
+.res-nightmode .arrow.upmod, .arrow.upmod { 
+    background:url(%%Imgmap%%) 0 0 !important;
+    background-position: 0px 0px !important;
+    }
+
+.res-nightmode .arrow.down, .arrow.down {
+    background:url(%%Imgmap%%) 0 0 !important;
+    background-position: 0px -36px !important;
+    }
+
+.res-nightmode .arrow.down:hover{
+    background:url(%%Imgmap%%) !important;
+    background-position: 0px -36px !important;
+    }
+
+.res-nightmode .arrow.downmod, .arrow.downmod {
+    background:url(%%Imgmap%%) 0 0 !important;
+    background-position: 0px -54px !important;
     }
 
 .res-nightmode .midcol[style], .midcol[style] {
@@ -147,8 +174,7 @@ body.res-nightmode:first-of-type {
     margin:0 !important;
     }
 
-/*=========================================*/
-/*DC03 Sidebar modification*/
+/*===========DC03 Sidebar modification===========*/
 
 .side, .sidebox .spacer, .titlebox form.toggle, .sidebox .morelink, .icon-menu a, .side .spacer, .content, .sidecontentbox .content {
     background-color: transparent;
@@ -162,11 +188,11 @@ body.res-nightmode:first-of-type {
     margin: 0 0 0 0;
     }
 
-/*Search bar removed because I can*/
+/*Search bar removed because I can
 #search {
     display: none;
     }
-
+*/
 /*Nightmode fixes*/
 
 .res-nightmode .sidebox.submit {
@@ -198,7 +224,8 @@ body.res-nightmode:first-of-type {
     content: "";
     height: 80px;
     width: 300px;
-    background-image: url(%%submitlink%%) !important;
+    background-image: url(%%Imgmap%%) !important;
+    background-position: -18px -80px !important;
     }
 
 .sidebox.submit-text a {
@@ -208,7 +235,8 @@ body.res-nightmode:first-of-type {
     content: "";
     height: 80px;
     width: 300px;
-    background-image: url(%%submittext%%) !important;
+    background-image: url(%%Imgmap%%) !important;
+    background-position: -18px 0 !important;
     }
 
 
@@ -261,7 +289,7 @@ body.res-nightmode:first-of-type {
     }
 
 .sidecontentbox a.author.id-t2_5n3bs:before, .sidecontentbox a.author.id-t2_5ifnt:before,.sidecontentbox a.author.id-t2_75mzg:before {
-    font-size:10pt;
+    font-size:10pt!important;
     color:#369;
     display:inline-block;
     }
@@ -278,56 +306,98 @@ body.res-nightmode:first-of-type {
     content: "Likely at fault";
     }
 
-/*==================Names & Flare==================*/
 
-a.author[href$="srsbsnsman"] {
-    font-size: 0px !important;
-    display: inline-block;
-    vertical-align: bottom;
-    overflow: hidden;
-    letter-spacing: -20px;
+/*==================Names==================*/
+
+/*Add a name here to replace it. Ensure , ends each line except the final one. Capitalization is important*/
+
+a.author[href$="srsbsnsman"],
+a.author[href$="Sangfroidish"],
+a.author[href$="ctare"],
+a.author[href$="Draze"],
+a.author[href$="Dundrioundio"],
+a.author[href$="Dwarflord"],
+a.author[href$="KommandantSprakle"],
+a.author[href$="sna_fu_bar"]
+
+{ 
+    font-size:0!important; 
+    overflow:hidden; 
+    display:inline-block; 
+    content: "";
     }
-a.author[href$="srsbsnsman"]:after {
-    content: "Forblaze";
-    font-size: 10px !important;
-    visibility: visible !important; 
-    display: block;
-    letter-spacing: normal;
-    }
-a.author[href$="Sangfroidish"] {
-    font-size: 0px !important;
-    display: inline-block;
-    vertical-align: bottom;
-    overflow: hidden;
-    letter-spacing: -20px;
-    }
-a.author[href$="Sangfroidish"]:after {
-    content: "Sangfroidfish";
-    font-size: 10px !important;
-    visibility: visible !important; 
-    display: block;
-    letter-spacing: normal;
-    }
-a.author[href$="ctare"] {
-    font-size: 0px !important;
-    display: inline-block;
-    vertical-align: bottom;
-    overflow: hidden;
-    letter-spacing: -20px;
-    }
-a.author[href$="ctare"]:after {
-    content: "Cone Engineer Master Interpreter Sensei Editor Card Czar Commander Overlord Wearwolf Jesus Captain Care Bear Ctare";
-    font-size: 10px !important;
-    visibility: visible !important; 
-    display: block;
-    letter-spacing: normal;
-    }
-a.author[href$="starkinmn"]:after {
-    color:#000; 
+
+/*And here; Remember to maintain formatting*/
+
+a.author[href$="srsbsnsman"]:before,
+a.author[href$="Sangfroidish"]:before,
+a.author[href$="ctare"]:before,
+a.author[href$="Dundrioundio"]:before,
+a.author[href$="Dwarflord"]:before,
+a.author[href$="Draze"]:before,
+a.author[href$="KommandantSprakle"]:before,
+a.author[href$="sna_fu_bar"]:before
+
+{
     font-size:10px!important; 
-    letter-spacing:normal;
-    content:"  Give me my fucking good flair, asshooe horsefuckers";
+    visibility:visible!important;
     }
+
+
+a.author[href$="srsbsnsman"]:before {content:"Forblaze"}
+a.author[href$="Sangfroidish"]:before {content: "Sangfroidfish"}
+a.author[href$="ctare"]:before {content: "Cone Engineer Master Interpreter Sensei Editor Card Czar Commander Overlord Wearwolf Jesus Captain Care Bear Ctare"}
+a.author[href$="Draze"]:before {content: "Mother Mustang"}
+a.author[href$="KommandantSprakle"]:before {content: "PeasantSprakle"}
+a.author[href$="sna_fu_bar"]:before {content: "anus_barf"}
+a.author[href$="Dundrioundio"]:before {content: "Dundrio"}
+a.author[href$="Dwarflord"]:before {content: "Cinor"}
+
+/*Names for extra text go here*/
+a.author[href$="Sangfroidish"]:after,
+a.author[href$="DoomedCivilian"]:after,
+a.author[href$="Draze"]:after,
+a.author[href$="ctare"]:after,
+a.author[href$="LunarWolves"]:after,
+a.author[href$="duruz"]:after,
+a.author[href$="moonomnom"]:after,
+a.author[href$="MotharChoddar"]:after,
+a.author[href$="Dwarflord"]:after,
+a.author[href$="starkinmn"]:after
+
+{   border-radius: 4px;
+    margin-left: 4px;
+    background-color: #CCC;
+    color:#000000; 
+    font-size:10px!important; 
+    letter-spacing:normal; 
+    }
+/*Extra text here, add spaces so it looks nice*/
+a.author[href$="Sangfroidish"]:after { content:" Shoehorn Sexpert "}
+a.author[href$="DoomedCivilian"]:after { content:" CSS Breaker "}
+a.author[href$="Draze"]:after { content: " Giddy Up "}
+a.author[href$="duruz"]:after { content: " Doesn't oil up "}
+a.author[href$="starkinmn"]:after { content: " Give me my fucking good flair, asshooe horsefuckers "}
+a.author[href$="MotharChoddar"]:after { content: " Finnish drunk "}
+a.author[href$="LunarWolves"]:after { content: " Dear Leader "}
+a.author[href$="ctare"]:after {content: " Among other things "}
+a.author[href$="Dwarflord"]:after {content: " Will write that fic someday "}
+a.author[href$="moonomnom"]:after {content: " Dayum shame"}
+
+
+/* This is to append something to everyone. Remove comments to activate*/
+/*
+a.author:before{
+    content:"Silly pony "
+    }
+*/
+/* This is to add text to the end of everyones name. Remove comments to activate*/
+/*
+a.author:after{
+    content:" is a silly pony"
+    }
+*/
+
 
 /*==================EMOTES==================*/
 a[href|="/america"] {
@@ -440,40 +510,6 @@ a[href|="/cis"] {
 
 
 /* ------MACROS------- */
-a[href="/couragewolf"] {
-    width: 300px !important;
-    height: 300px !important;
-    cursor: default !important;
-    display: inline-block !important;
-    background-image: url(%%courage%%) !important;
-    background-repeat: no-repeat !important;
-    background-position: 0 0 !important;
-    text-align: center !important;
-    color: white !important;
-    font-family: Impact, sans-serif !important;
-    font-size: 25px !important;
-    line-height: 24px !important;
-    text-shadow: 1px 1px 1px black, -1px -1px 1px black, -1px 1px 1px black, 1px -1px 1px black !important;
-    overflow: hidden !important;
-    position: relative !important;
-    text-transform: uppercase !important
-    }
-a[href="/couragewolf"] em {
-    font-style: normal !important;
-    position: absolute !important;
-    top: 12px !important;
-    width: 280px !important;
-    left: 50% !important;
-    margin-left: -140px !important
-    }
-a[href="/couragewolf"] strong {
-    font-weight: normal !important;
-    position: absolute !important;
-    bottom: 12px !important;
-    width: 280px !important;
-    left: 50% !important;
-    margin-left: -140px !important
-    }
 a[href="/scumbagrando"] {
     width: 300px !important;
     height: 300px !important;
@@ -508,6 +544,8 @@ a[href="/scumbagrando"] strong {
     left: 50% !important;
     margin-left: -140px !important
     }
+
+
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: transparent!important; }
 
@@ -522,7 +560,7 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
     border-radius: 0;
     background: transparent;
     content: "";
-    background-image: url(%%flair%%);
+    background-image: url(%%flairmap%%);
     display: inline-block;
     background-repeat: no-repeat
 }
@@ -539,18 +577,18 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 .flair-apple {width:34px; height:35px; background-position: 0px -358px}
 .flair-twist {width:27px; height:40px; background-position: 0px -393px}
 .flair-fishjuice {width:26px; height:55px; background-position: 0px -433px}
-.flair-soup {background-image: url(%%soupflair%%); width:35px; height:32px}
+.flair-soup {width:35px; height:32px; background-position: 0px -488px}
 .flair-catplanet {background-image: url(%%catflair%%); width:35px; height:35px}
-.flair-tree {background-image: url(%%treeflair%%); width:33px; height:40px}
-.flair-derpeye {background-image: url(%%derpeyeflair%%); width:35px; height:35px}
-.flair-sausage {background-image: url(%%sausageflair%%); width:35px; height:35px}
-.flair-lunasad {background-image: url(%%lunasadflair%%); width:35px; height:35px}
-.flair-nopants {background-image: url(%%nopantsflair%%); width:28px; height:35px}
-.flair-wagonsabutt {background-image: url(%%lol%%); width:20px; height:25px}
-.flair-b24 {background-image: url(%%b24%%); width:30px; height:30px}
-.flair-cap {background-image: url(%%capflair%%); width:30px; height:28px}
-.flair-bed {background-image: url(%%bedflair%%); width:30px; height:19px}
-.flair-ass {background-image: url(%%assflair%%); width:26px; height:30px}
-.flair-penis {background-image: url(%%apenisflair%%); width:47px; height:10px}
-.flair-hat {background-image: url(%%hatlfair%%); width:30px; height:28px}
-.flair-harry {background-image: url(%%harryflair%%); width:30px; height:30px}
+.flair-tree {width:33px; height:40px; background-position: 0px -554px}
+.flair-derpeye {width:35px; height:35px; background-position: 0px -596px}
+.flair-sausage {width:35px; height:34px; background-position: 0px -631px}
+.flair-lunasad {width:35px; height:35px; background-position: 0px -663px}
+.flair-wagonsabutt {width:20px; height:25px; background-position: 0px -698px}
+.flair-b24 {width:30px; height:30px; background-position: 0px -723px}
+.flair-cap {width:30px; height:30px; background-position: 0px -752px}
+.flair-bed {width:30px; height:19px; background-position: 0px -782px}
+.flair-ass {width:26px; height:30px; background-position: 0px -802px}
+.flair-penis {width:47px; height:10px; background-position: 0px -832px}
+.flair-hat {width:30px; height:28px; background-position: 0px -843px}
+.flair-harry {width:30px; height:30px; background-position: 0px -872px}
+.flair-nopants {width:28px; height:35px; background-position: 0px -902px}
